welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:13: error: type mismatch;
 found   : Unit
 required: Boolean
		if(x=0){ progres = progres +1}
                    ^